Fix overlap of info box and right sidebar
Seen in Firefox: https://www.dropbox.com/s/a4d2ltanx343kh0/Screenshot%202014-04-10%2009.57.51.png

--- a/resources/mmv/ui/mmv.ui.metadataPanel.less
+++ b/resources/mmv/ui/mmv.ui.metadataPanel.less
@@ -13,7 +13,6 @@
 .mw-mmv-info-box {
 	display: inline-block;
 	overflow: hidden;
-	width: 100%;
 
 	border: 1px solid @info-box-border-color;
 	border-bottom: 2px solid @info-box-border-shadow-color;
